--- a/adk_frontend/package.json
+++ b/adk_frontend/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.10.0",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-loading-indicators": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
